--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <meta property="og:title" content="Divy Parekh" />
   <meta property="og:description" content="Divy Parekh - Portfolio" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image" content="/logo.jpg" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@DivyParekh" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:image" content="/logo.jpg" />
 </head>
 
 <body>
